# whispering_fire

./: .dockerignore  .gitattributes  .gitignore  Containerfile  Dockerfile  README.md  auth.sh  deploy.sh  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: checker.sh  workflow_deploy.yml  workflow_pr.yml  workflow_promote_release.yml  workflow_release  workflow_release.yml  workflow_tag_trunk.yml
.github/workflows/utils/: change_schema.yml  checker.sh  environments.yml  pipeline_data.sh  pr_comment.js  version_check.sh
src/: conftest.py
src/whispering_fire/: __main__.py  main.py
tests/: conftest.py
tests/functional/: test_main.py
tests/unit/: test_main.py
