[build-system]
requires = [
    "setuptools >= 61.0",
]
build-backend = "setuptools.build_meta"


[project]
name = "whispering_fire"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "pydantic",
    "fastapi[standard]"
]
authors = [
    {name = "Rhys Deimel", email = "deimelr@hotmail.com"},
]
maintainers = [
    {name = "Rhys Deimel", email = "deimelr@hotmail.com"},
]
description = "Template repo for python projects"
readme =  "README.md"
license = {text = "MIT License"}

[project.optional-dependencies]
test = [
    "pytest",
    "tox",
]
lint = [
    "mypy",
    "ruff",
]
dev = [
    "whispering_fire[test,lint]",
]


[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
fail_under = 95
ignore_errors = true
skip_covered = true
skip_empty = true

[tool.coverage.run]
branch = true
omit = [
    "tests/conftest.py"
]


[tool.mypy]
exclude = [
    'venv/*',
    'build/*'
]


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "incremental",
]


[tool.ruff]
line-length = 100

[tool.ruff.format]
preview = true
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
preview = true
select = [
    "E4",  # pycodestyle errors 4xx
    "E7",  # pycodestyle errors 7xx
    "E9",  # pycodestyle errors 9xx
    "F",  # pyflakes
    "FAST",  # FastAPI
    "I",  # isoert,
    "N",  # pep8-naming
    "RUF", # ruff-specific rules
    "U",  # pyupgrade
]


[tool.setuptools.dynamic]
version = {attr = "whispering_fire.__version__"}
